compiler/tests/invalid_programs/dependent_types/missing_attribute.jm
#!TypeError

def foo(o)
  puts(o.bar)
end

foo(12)
